# AI4R_No13

./: .gitignore  LICENSE.txt  README.md  gpiod_rc_switch_testing  gpiod_rc_switch_testing.cpp
catkin_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
catkin_ws/log/: latest_build
docker/: Dockerfile  README.md  changelog.md  docker-compose.yml  docker_tests.sh  setup_web_interface.sh
install/: install.sh
mcu_ws/: CMakeLists.txt  ai4r-sensors.cpp
pcb_files/AI4R-PIHAT/: ._AI4R-PIHAT.kicad_pro  AI4R-PIHAT.kicad_pcb  AI4R-PIHAT.kicad_prl  AI4R-PIHAT.kicad_pro  AI4R-PIHAT.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb_files/AI4R-PIHAT/Component-Libraries/: ._Polulu-PCA9685
pcb_files/AI4R-PIHAT/Component-Libraries/Polulu-PCA9685/: ._Polulu-PCA9685.kicad_sym  ._Polulu-PCA9685.step  Polulu-PCA9685.bak  Polulu-PCA9685.kicad_mod  Polulu-PCA9685.kicad_sym
pcb_files/AI4R-PIHAT/Component-Libraries/Polulu2801-RCSwitch/: ._2801RCSwitch.step
pcb_files/AI4R-PIHAT/Outputs/gerber_to_order/AI4R-PIHAT_65.0x56.0mm_for_Default/: AI4R-PIHAT-B_Silks.gbr  AI4R-PIHAT-Edge_Cuts.gbr  AI4R-PIHAT-F_Mask.gbr  AI4R-PIHAT-NPTH.drl
pcb_files/AI4R-PIHAT/Outputs/gerber_to_order/AI4R-PIHAT_65.0x56.0mm_for_Elecrow/: AI4R-PIHAT.GBL  AI4R-PIHAT.GBS  AI4R-PIHAT.GTL  AI4R-PIHAT.GTO
pcb_files/AI4R-PIHAT/Outputs/gerber_to_order/AI4R-PIHAT_65.0x56.0mm_for_FusionPCB/: AI4R-PIHAT.TXT
pcb_files/AI4R-PIHAT/Outputs/gerber_to_order/AI4R-PIHAT_65.0x56.0mm_for_JLCPCB/: AI4R-PIHAT-PTH.TXT
pcb_files/AI4R-PIHAT/Outputs/gerber_to_order/AI4R-PIHAT_65.0x56.0mm_for_PCBWay/: AI4R-PIHAT-PTH.TXT  AI4R-PIHAT.GBL  AI4R-PIHAT.GBO  AI4R-PIHAT.GBS  AI4R-PIHAT.GML  AI4R-PIHAT.GTL  AI4R-PIHAT.GTO  AI4R-PIHAT.GTS
pcb_files/AI4R-SENSORPCB/: AI4R-SENSORPCB.kicad_pcb  AI4R-SENSORPCB.kicad_prl  AI4R-SENSORPCB.kicad_pro  AI4R-SENSORPCB.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~AI4R-SENSORPCB.kicad_pcb.lck
pcb_files/AI4R-SENSORPCB/Component-Libraries/: ._1734035-3.stp  ._PRT-12748
pcb_files/AI4R-SENSORPCB/Component-Libraries/FSM300/: ._FSM300.kicad_mod  ._FSM300.kicad_sym  ._FSM300.stp  FSM300.kicad_mod  FSM300.kicad_sym
pcb_files/AI4R-SENSORPCB/Component-Libraries/PRT-12748/: ._PRT-12748.kicad_sym  ._PRT-12748.step  ._SPARKFUN_PRT-12748.kicad_mod  ._how-to-import.htm  PRT-12748.kicad_sym  PRT-12748.step  SPARKFUN_PRT-12748.kicad_mod
pcb_files/AI4R-SENSORPCB/Component-Libraries/Polulu2801-RCSwitch/: ._2801RCSwitch.step  2801RCSwitch.kicad_mod  2801RCSwitch.kicad_sym
pcb_files/AI4R-SENSORPCB/Component-Libraries/RP2040-Zero/: ._RP2040-Zero.STEP  ._RP2040-Zero.kicad_sym  RP2040-Zero.kicad_mod
pcb_files/AI4R-SENSORPCB/Outputs/gerber_to_order/AI4R-SENSORPCB_50.0x80.0mm_for_Default/: AI4R-SENSORPCB-B_Cu.gbr  AI4R-SENSORPCB-Edge_Cuts.gbr  AI4R-SENSORPCB-F_Cu.gbr  AI4R-SENSORPCB-F_Mask.gbr
pcb_files/AI4R-SENSORPCB/Outputs/gerber_to_order/AI4R-SENSORPCB_50.0x80.0mm_for_Elecrow/: AI4R-SENSORPCB-PTH.TXT  AI4R-SENSORPCB.GBL  AI4R-SENSORPCB.GBO
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ai4r_interfaces/share/ai4r_interfaces/: local_setup.sh  package.bash  package.dsv  (+4 more)
ros2_ws/log/: latest_build
ros2_ws/src/ai4r_interfaces/: CMakeLists.txt
ros2_ws/src/ai4r_interfaces/msg/: ConePointsArray.msg  EscAndSteering.msg  EscAndSteeringPercent.msg  EscAndSteeringPulseWidth.msg  ImagePointsArray.msg  Imu.msg  IntArray.msg  TofSensor.msg
ros2_ws/src/ai4r_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/ai4r_pkg/config/: config_1.yaml  config_for_line_detector.yaml  traxxas_node_params.yaml
ros2_ws/src/ai4r_pkg/drivers/src/i2c_driver/: i2c_driver.cpp  i2c_driver.h
ros2_ws/src/ai4r_pkg/drivers/src/pca9685/: pca9685.cpp  pca9685.h  pca9685_constants.h
ros2_ws/src/ai4r_pkg/drivers/src/vl53l5cx/: vl53l5cx.cpp  vl53l5cx.h  vl53l5cx_array.cpp  vl53l5cx_array.h
ros2_ws/src/ai4r_pkg/include/ai4r_pkg/: pwm_driver_node.hpp  topic_names.hpp  traxxas_node.hpp  traxxas_old_node.hpp
ros2_ws/src/ai4r_pkg/launch/: camera_stream_launch.py  cone_detector_launch.py  line_detector_launch.py  policy_launch.py  rosbridge_websocket_launch.xml  traxxas_launch.py
ros2_ws/src/ai4r_pkg/scripts/: ImageProcessor.py  LineDetectorCircle.py  LineDetectorEllipse.py  Utils.py  cone_detector.py  cone_detector_node.py  image_publishing_line_detector_node.py  image_publishing_node.py  keyboard_teleop.py  line_detector_node.py  minimal_py_node.py  oop_pub_py_node.py  oop_py_node.py  policy_node.py  policy_node_YG.py  py_node.py  stream_oak.py  stream_oak_node.py  stream_oak_node_old.py  test_yaml_params.py
ros2_ws/src/ai4r_pkg/src/: cpp_node.cpp  esc_calibration_service_testing.cpp  gpiod_rc_switch_testing.cpp  looping_cpp_node.cpp  minimal_cpp_node.cpp  multiple_pub_sub_cpp_node.cpp  mux_testing.cpp  oop_cpp_node.cpp  oop_pub_cpp_node.cpp  pwm_driver_node.cpp  rc_switch_node.cpp  sensor_pcb_parser.cpp  servo_pulse_width_sub_cpp_node.cpp  traxxas_node.cpp  traxxas_old_node.cpp
web_interface/foxglove_ui/: AI4R_UI.json
web_interface/html/: ai4r.php  ai4r_tab_compile.html  ai4r_tab_info.html  ai4r_tab_ros.html  ai4r_tab_workflow.html  callBashScript.php  callBashScript_killViaProcessName.php  callBashScript_roslaunch.php  getFileContents.php  home_tab_about.html  home_tab_enter.html  page_header.html  page_header_for_ai4r.html  sensor_systems_tab_workflow.html
web_interface/html/bashscripts/: catkin_make.sh  catkin_make_clean.sh  colcon_build.sh  gitCheckoutAll.sh  gitCheckoutMaster.sh  gitDiff.sh  gitPull.sh  gitStatus.sh  killRos2All.sh  killViaProcessName.sh  launchRos2LineDetector.sh  launchRos2Policy.sh  launchRos2RosBridge.sh  launchRos2Traxxas.sh  ros2nodeList.sh  ros2serviceList.sh  ros2topicList.sh  updatewebinterface.sh
web_interface/html/css/: code.css  layout.css  line_detector_canvas.css  tabs_main.css
web_interface/html/js/: callgit.js  getFileContents.js  killNodeViaProcessName.js  lineDetectorCanvas.js  rosbridge.js  rosbridge_for_ai4r.js  roslaunch.js  substitute_namespace_into_rosbridge_javascript.sh
web_interface/html/outfiles_for_nodes/: outfiles_appear_here.txt
(+90 files in other folders)
